--- a/OnlineShopDemo/Areas/Admin/Views/Login/Index.cshtml
+++ b/OnlineShopDemo/Areas/Admin/Views/Login/Index.cshtml
@@ -3,6 +3,11 @@
     Layout = null;
 }
 
+@model OnlineShopDemo.Areas.Admin.Models.LoginModel
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,13 +18,13 @@
     <meta name="author" content="">
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
     <!-- Bootstrap Core CSS -->
-    <link href="~Assets/admin/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Assets/admin/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- MetisMenu CSS -->
-    <link href="~Assets/admin/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+    <link href="~/Assets/admin/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="~Assets/admin/dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="~/Assets/admin/dist/css/sb-admin-2.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href="~Assets/admin/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="~/Assets/admin/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -36,6 +41,8 @@
                         <h3 class="panel-title">Please Sign In</h3>
                     </div>
                     <div class="panel-body">
+
+                        <!-- 
                         <form role="form">
                             <fieldset>
                                 <div class="form-group">
@@ -48,23 +55,51 @@
                                     <label>
                                         <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                     </label>
-                                </div>
-                                <!-- Change this to a button or input when using this as a form -->
+                                </div>                           
                                 <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
                             </fieldset>
                         </form>
+                        -->
+
+                        @using (Html.BeginForm())
+                        {
+
+
+                            @Html.AntiForgeryToken()    // validate lại cái key ở server và client
+
+                            @Html.ValidationSummary(true, null, new { @class = "alert alert-danger"} ) // hiển thị mã lỗi
+                            
+                                <fieldset>
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(model=>model.UserName, new { @class = "form-control", @placeholder = "UserName", @autofocus="autofocus" } )
+
+                                    </div>
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(model => model.Password, new { @class = "form-control", @placeholder = "Password", @autofocus = "password" })
+                                    </div>
+                                    <div class="checkbox">
+                                        <label>
+                                            @Html.CheckBoxFor(model=>model.RememberMe)  
+                                            Remember Me                                          
+                                        </label>
+                                    </div>
+
+                                    <button type="submit" class="btn btn-lg btn-success btn-block"> Login </button>                                    
+                                </fieldset>
+                            
+                        }
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- jQuery -->
-    <script src="~Assets/admin/vendor/jquery/jquery.min.js"></script>
+    <script src="~/Assets/admin/vendor/jquery/jquery.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="~Assets/admin/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/Assets/admin/vendor/bootstrap/js/bootstrap.min.js"></script>
     <!-- Metis Menu Plugin JavaScript -->
-    <script src="~Assets/admin/vendor/metisMenu/metisMenu.min.js"></script>
+    <script src="~/Assets/admin/vendor/metisMenu/metisMenu.min.js"></script>
     <!-- Custom Theme JavaScript -->
-    <script src="~Assets/admin/dist/js/sb-admin-2.js"></script>
+    <script src="~/Assets/admin/dist/js/sb-admin-2.js"></script>
 </body>
 </html>
