- Using MembershipProvider to check login  + step 1: Config on web.config  + step 2: create class CustomMembershipProvider : MembershipProvider  + step 3: using MembershipProvider at LoginController file

--- a/OnlineShopDemo/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/OnlineShopDemo/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -252,7 +252,9 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                            @Html.ActionLink("Đăng Xuất", "Logout", "login")
+
+                            @*<a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>*@
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
