--- a/OnlineShopDemo/Views/Home/Index.cshtml
+++ b/OnlineShopDemo/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<h2> template web hererre       </h2>
+<h2> template web here       </h2>
 
 <div ng-controller="HomeController">
     {{Message}}
