- Apply app.js, CategoryController to Admin page

--- a/OnlineShopDemo/Views/Shared/_Layout.cshtml
+++ b/OnlineShopDemo/Views/Shared/_Layout.cshtml
@@ -7,9 +7,8 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    @*added angular library by zidane*@
-    @Scripts.Render("~/bundles/angular")
-    <script src="~/Scripts/MyApp.js"></script>     
+    @*added angularjs library by zidane*@    
+    
 
 </head>
 <body>
