--- a/OnlineShopDemo/Areas/Admin/Views/Category/Index.cshtml
+++ b/OnlineShopDemo/Areas/Admin/Views/Category/Index.cshtml
@@ -1,16 +1,15 @@
 ﻿
 @model List<Models.EF.Category>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Category Items";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-
-
-<div id="page-wrapper">
+ 
+<div id="page-wrapper" ng-controller="CategoryController">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Tables</h1>
+            <h1 class="page-header">Tables {{title}}</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -44,12 +43,7 @@
 
                         </tbody>
                     </table>
-                    <!-- /.table-responsive -->
-                    <div class="well">
-                        <h4>DataTables Usage Information</h4>
-                        <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
-                        <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
-                    </div>
+                
                 </div>
                 <!-- /.panel-body -->
             </div>
