--- a/OnlineShopDemo/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/OnlineShopDemo/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -33,19 +33,32 @@
     <![endif]-->
 
 
+
+    <!-- AngularJS 1.4.9 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.min.js"> </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.js"> </script>
+
+    <!-- inclue AngularJS Controller -->
+
+    <script src="~/SPA/Service/apiService.js"></script> <!-- remmber added service before add to app -->
+    <script src="~/SPA/Controller/CategoryController.js"></script>  <!-- remmber added controller to cshtml -->
+    <script src="~/SPA/app.js"></script>
+
 </head>
-<body>
+<body ng-app="app">
     <div id="wrapper">
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only">Toggle navigation </span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+                <input type="text" ng-model="msg" /> {{msg}}
             </div>
             <!-- /.navbar-header -->
             <ul class="nav navbar-top-links navbar-right">
@@ -252,8 +265,8 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            @Html.ActionLink("Đăng Xuất", "Logout", "login")
-
+                            @Html.ActionLink("Đăng Xuất", "Logout", "Login")  @*home/LoginController/Logout*@
+                            
                             @*<a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>*@
                         </li>
                     </ul>
@@ -269,7 +282,7 @@
         
 
 
-        <!-- zidane: bên phải sidebar -->
+        <!-- zidane: content bên phải -->
         <div id="page-wrapper">
             @RenderBody()
         </div>
