- Fix bug cal; api with $http: angular (using service)

--- a/OnlineShopDemo/Views/Category/Index.cshtml
+++ b/OnlineShopDemo/Views/Category/Index.cshtml
@@ -2,8 +2,9 @@
 @model List<Models.EF.Category>
 @{
     ViewBag.Title = "Category Items";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
  
 <div id="page-wrapper" ng-controller="CategoryController">
     <div class="row">
@@ -33,13 +34,6 @@
                         </thead>
                         <tbody>
                             <tr class="odd gradeX">
-                                <td>Trident</td>
-                                <td>Internet Explorer 4.0</td>
-                                <td>Win 95+</td>
-                                <td class="center">4</td>
-                                <td class="center">X</td>
-                            </tr>
-                            <tr class="even gradeX">
                                 <td>Trident</td>
                                 <td>Internet Explorer 4.0</td>
                                 <td>Win 95+</td>
