--- a/OnlineShopDemo/Views/Login/Index.cshtml
+++ b/OnlineShopDemo/Views/Login/Index.cshtml
@@ -3,7 +3,9 @@
     Layout = null;
 }
 
-@model OnlineShopDemo.Areas.Admin.Models.LoginModel
+@model OnlineShopDemo.Models.LoginModel
+
+
 
 
 <!DOCTYPE html>
