- update validation, miss understand about CategoryValidateController Not found???

--- a/OnlineShopDemo/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/OnlineShopDemo/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -41,8 +41,10 @@
 
     <!-- inclue AngularJS Controller -->
 
+
     
     <script src="~/SPA/Controller/CategoryController.js"></script>  <!-- remmber added controller to cshtml -->
+    <script src="~/SPA/Controller/CategoryValidateController.js"></script>
     
 
 </head>
