--- a/OnlineShopDemo/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/OnlineShopDemo/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -42,7 +42,8 @@
     <!-- inclue AngularJS Controller -->
 
 
-    
+
+    <script src="~/SPA/app.js"></script>
     <script src="~/SPA/Controller/CategoryController.js"></script>  <!-- remmber added controller to cshtml -->
     <script src="~/SPA/Controller/CategoryValidateController.js"></script>
     
