~ remove junk files

--- a/OnlineShopDemo/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/OnlineShopDemo/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -60,6 +60,8 @@
 
 
     <script src="~/SPA/app.js"></script>
+    <script src="~/SPA/categoryService.js"></script>
+
     <script src="~/SPA/Controller/CategoryController.js"></script>  <!-- remmber added controller to cshtml -->
     <script src="~/SPA/Controller/CategoryValidateController.js"></script>
     
