--- a/OnlineShopDemo/Areas/Admin/Views/Category/Index.cshtml
+++ b/OnlineShopDemo/Areas/Admin/Views/Category/Index.cshtml
@@ -18,17 +18,21 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 DataTables Advanced Tables
+
+                <input type="button" class="btn btn-warning" value="Add Employee" ng-click="openAddCategoryDialog()" />
+
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                     <thead>
                         <tr>
-                            <th>ID</th>
-                            <th>Name</th>
-                            <th>Alias</th>
-                            <th>Create date</th>
-                            <th>Status</th>
+                            <th><b>ID</b></th>
+                            <th><b>Name</b></th>
+                            <th><b>Alias</b></th>
+                            <th><b>Create date</b></th>
+                            <th><b>Status</b></th>
+                            <th><b></b>Actions</b></th>
 
                         </tr>
                     </thead>
@@ -40,6 +44,12 @@
                             <td>{{item.Alias}}</td>
                             <td>{{item.CreateDate}}</td>
                             <td>{{item.Status}}</td>
+
+                            <td>
+                                <span ng-click="editCategory(item)" class="btn btn-primary"> Edit </span>
+                                <span ng-click="deleteCategory(item)" class="btn btn-danger"> Delete </span>
+
+                            </td>
                         </tr>
 
                         @*<tr class="odd gradeX">
@@ -115,12 +125,77 @@
 
 
 
+<div ng-show="showCategory">
+    <!-- ProductName -->
+    <div ng-class="myForm.ProductName.$dirty && myForm.ProductName.$invalid ? 'form-group has-error' : 'form-group has-success'">
+        <label class="control-label" for="ProductName">
+            @Html.LabelFor(model => model.Name)
+        </label>
+        <input type="text" class="form-control" id="ProductName" name="ProductName" ng-model="ProductName" required>
+    </div>
+    <p>
+        @Html.ValidationMessageFor(model => model.Name, null)
+        <span style="color:red" ng-show="myForm.ProductName.$dirty && myForm.ProductName.$invalid">
+            <span ng-show="myForm.ProductName.$error.required">Product Name is required.</span>
+        </span>
+    </p>
+
+    <!-- ProductAlias -->
+    <div ng-class="myForm.ProductAlias.$dirty && myForm.ProductAlias.$invalid ? 'form-group has-error' : 'form-group has-success'">
+        <label class="control-label" for="ProductAlias">
+            @Html.LabelFor(model => model.Alias)
+        </label>
+        <input type="text" class="form-control" id="ProductAlias" name="ProductAlias" ng-model="ProductAlias" required>
+    </div>
+    <p>
+        <span style="color:red" ng-show="myForm.ProductAlias.$dirty && myForm.ProductAlias.$invalid">
+            <span ng-show="myForm.ProductAlias.$error.required">Product Alias is required.</span>
+        </span>
+    </p>
+
+    <!-- Birthday -->
+    <div ng-class="myForm.BirthDate.$dirty && myForm.BirthDate.$invalid ? 'form-group has-error' : 'form-group has-success'">
+        <label class="control-label" for="BirthDate">Product Alias: </label>
+        <input type="date" class="form-control" id="BirthDate" name="BirthDate" ng-model="BirthDate" required>
+    </div>
+    <p>
+        <span style="color:red" ng-show="myForm.BirthDate.$dirty && myForm.BirthDate.$invalid">
+            <span ng-show="myForm.BirthDate.$error.required">Birth Date is required.</span>
+            <span ng-show="myForm.BirthDate.$error.date">Not a Valid Date.</span>
+        </span>
+    </p>
+
+    <!-- Status -->
+    <div class="form-group">
+        <label>Status</label>
+        <select class="form-control" ng-model="Status">
+            <option>True</option>
+            <option selected>False</option>
+        </select>
+    </div>
+
+
+
+    <button type="button" class="btn btn-primary" ng-click="AddUpdateCategory()"
+            ng-disabled="myForm.ProductName.$invalid ||
+                                myForm.ProductAlias.$invalid ||
+                                myForm.BirthDate.$invalid||
+                                myForm.email.$invalid ||
+                                myForm.marks.$invalid ">
+
+        submit
+    </button>
+
+</div>
+
+
+
 @section ClientScript
-{
-    <!-- DataTables CSS -->    
+    {
+    <!-- DataTables CSS -->
     <link href="~/Assets/admin/vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet" />
 
-    <!-- DataTables Responsive CSS -->    
+    <!-- DataTables Responsive CSS -->
     <link href="~/Assets/admin/vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet" />
 
     <!-- DataTables JavaScript -->
@@ -129,9 +204,9 @@
     <script src="~/Assets/admin/vendor/datatables-responsive/dataTables.responsive.js"></script>
 
 
-     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
+    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('#dataTables-example').DataTable({
                 responsive: true
             });
